@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.114 2004/11/23 00:02:56 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.115 2004/12/06 22:25:10 wolf31o2 Exp $
+
+  06 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/stage1/stage1-preclean2-chroot.sh:
+  Added patch from vapier and closing bug #73556.
 
   22 Nov 2004; John Davis <zhen@gentoo.org> modules/embedded_target.py,
   modules/generic_stage_target.py, -targets/embedded/cramfs-runscript.sh,
